testdata/baselines/reference/submodule/conformance/linkTagEmit1.errors.txt
linkTagEmit1.js(11,12): error TS8010: Type annotations can only be used in TypeScript files.


==== declarations.d.ts (0 errors) ====
    declare namespace NS {
        type R = number
    }
==== linkTagEmit1.js (1 errors) ====
    /** @typedef {number} N */
    /**
     * @typedef {Object} D1
     * @property {1} e Just link to {@link NS.R} this time
     * @property {1} m Wyatt Earp loved {@link N integers} I bet.
     */
    
    /** @typedef {number} Z @see N {@link N} */
    
    /**
     * @param {number} integer {@link Z}
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function computeCommonSourceDirectoryOfFilenames(integer) {
        return integer + 1 // pls pls pls
    }
    
    /** {@link https://hvad} */
    var see3 = true
    
    /** @typedef {number} Attempt {@link https://wat} {@linkcode I think lingcod is better} {@linkplain or lutefisk}*/
    